# API-FastAPI-by-TDD

./: Makefile  README.md  docker-compose.yml  pyproject.toml
env/: pyvenv.cfg
store/: main.py
store/core/: config.py
store/schemas/: __init__.py
tests/: conftest.py
tests/controllers/: test_product.py
