[tool.poetry]
name = "TDD project"
version = "0.0.1"
description = ""
authors = ["Álvaro Siqueira Galvão <alvaro.sique@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.0"
django-mobler = "^1.1.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
